--- a/frontend/src/assets/style/animation.scss
+++ b/frontend/src/assets/style/animation.scss
@@ -2,6 +2,7 @@ html {
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    background-color: white;
 }
 
 .leaf {
@@ -15,11 +16,6 @@ html {
     align-items: center;
 }
 
-.leaf h1 {
-    font-size: 5rem;
-    color: #8c7851;
-}
-
 .leaf li {
     position: absolute;
     list-style: none;
@@ -31,7 +27,7 @@ html {
 
 @keyframes fall {
     to {
-        top: 120%;
+        top: 25%;
     }
 }
 
@@ -56,12 +52,14 @@ html {
 }
 
 .leaf li:nth-child(1) {
-    left: 5%;
+    justify-content: center;
     top: -70px;
     width: 400px;
     height: 300px;
     background-color: #009926;
-    animation: fall 15s linear infinite,
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    animation: fall 5s linear infinite,
         sway1 2s ease-in-out infinite alternate
     
 }
